// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CategoryButton Component renders as selected 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "backgroundColor": "#BF0A25",
      },
      {
        "paddingLeft": 16,
        "paddingRight": 16,
      },
      {
        "justifyContent": "center",
      },
      {
        "borderBottomLeftRadius": 8,
        "borderBottomRightRadius": 8,
        "borderTopLeftRadius": 8,
        "borderTopRightRadius": 8,
      },
      {
        "height": 40,
      },
      {
        "borderBottomWidth": 2,
        "borderLeftWidth": 2,
        "borderRightWidth": 2,
        "borderTopWidth": 2,
      },
      {
        "borderBottomColor": "#BF0A25",
        "borderLeftColor": "#BF0A25",
        "borderRightColor": "#BF0A25",
        "borderTopColor": "#BF0A25",
      },
      {
        "backgroundColor": "#f1f5f9",
      },
    ]
  }
>
  <Text
    style={
      [
        {
          "color": "#f1f5f9",
        },
        {
          "fontFamily": "Inter_500Medium",
        },
        {
          "fontSize": 14,
          "lineHeight": 20,
        },
        {
          "color": "#BF0A25",
        },
        {
          "fontFamily": "Inter_600SemiBold",
        },
      ]
    }
  >
    Selected Category
  </Text>
</View>
`;

exports[`CategoryButton Component renders with title 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "backgroundColor": "#BF0A25",
      },
      {
        "paddingLeft": 16,
        "paddingRight": 16,
      },
      {
        "justifyContent": "center",
      },
      {
        "borderBottomLeftRadius": 8,
        "borderBottomRightRadius": 8,
        "borderTopLeftRadius": 8,
        "borderTopRightRadius": 8,
      },
      {
        "height": 40,
      },
    ]
  }
>
  <Text
    style={
      [
        {
          "color": "#f1f5f9",
        },
        {
          "fontFamily": "Inter_500Medium",
        },
        {
          "fontSize": 14,
          "lineHeight": 20,
        },
      ]
    }
  >
    Test Category
  </Text>
</View>
`;
